Feito o Cadastro de Usuarios
Feito e testado o cadastro de Usuarios utilizando o Thunder client.
